Upload via Repo Manager v5 by Ted

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Pak Dimas — Dibangun oleh Ted.</p>
+        <p>© 2025 dimas.my.id — Dibangun oleh Ted.</p>
     </footer>
 
 </body>
