--- a/articles.html
+++ b/articles.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Artikel — Pak Dimas</title>
+    <title>Artikel — Dimas Supriyanto</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
     <header class="navbar">
-        <div class="logo">PakDimas</div>
+        <div class="logo">dimas.my.id</div>
         <nav>
             <a href="index.html">Beranda</a>
             <a href="articles.html" class="active">Artikel</a>
@@ -48,7 +48,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Pak Dimas — Dibangun oleh Ted.</p>
+        <p>© 2025 dimas.my.id — Dibangun oleh Ted.</p>
     </footer>
 
 </body>
