--- a/contributors.html
+++ b/contributors.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontributor — Pak Dimas</title>
+    <title>Kontributor — Dimas Supriyanto</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
     <header class="navbar">
-        <div class="logo">PakDimas</div>
+        <div class="logo">dimas.my.id</div>
         <nav>
             <a href="index.html">Beranda</a>
             <a href="articles.html">Artikel</a>
@@ -24,7 +24,7 @@
 
     <section class="page-header">
         <h1>Penulis & Kontributor</h1>
-        <p>Penulis muda, wartawan tamu, dan siswa yang dibimbing Pak Dimas.</p>
+        <p>Penulis senior, wartawan tamu, dan siswa yang dibimbing Dimas Supriyanto.</p>
     </section>
 
     <section class="content-container contributor-list">
@@ -47,7 +47,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Pak Dimas — Dibangun oleh Ted.</p>
+        <p>© 2025 dimas.my.id — Dibangun oleh Ted.</p>
     </footer>
 
 </body>
