--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pak Dimas — Jurnalisme & Opini</title>
+    <title>Dimas Supriyanto — Jurnalisme & Opini</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <header class="navbar">
-        <div class="logo">PakDimas</div>
+        <div class="logo">dimas.my.id</div>
         <nav>
             <a href="index.html">Beranda</a>
             <a href="articles.html">Artikel</a>
@@ -60,7 +60,7 @@
     </section>
 
     <section class="profile-short">
-        <h2>Tentang Pak Dimas</h2>
+        <h2>Tentang Dimas Supriyanto</h2>
         <p>Wartawan senior dengan pengalaman lebih dari 20 tahun di dunia jurnalisme.
             Pernah meliput berbagai isu sosial, hukum, dan kemanusiaan.
             Aktif membimbing penulis muda dan memberikan pelatihan jurnalistik.</p>
@@ -68,7 +68,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Pak Dimas — Semua Hak Dilindungi. Dibangun oleh Ted.</p>
+        <p>© 2025 dimas.my.id — Semua Hak Dilindungi. Dibangun oleh Ted.</p>
     </footer>
 </body>
 
