--- a/training.html
+++ b/training.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pelatihan Jurnalistik — Pak Dimas</title>
+    <title>Pelatihan Jurnalistik — Dimas Supriyanto</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
     <header class="navbar">
-        <div class="logo">PakDimas</div>
+        <div class="logo">dimas.my.id</div>
         <nav>
             <a href="index.html">Beranda</a>
             <a href="articles.html">Artikel</a>
@@ -51,7 +51,7 @@
     </section>
 
     <footer>
-        <p>© 2025 Pak Dimas — Dibangun oleh Ted.</p>
+        <p>© 2025 dmas.my.id — Dibangun oleh Ted.</p>
     </footer>
 
 </body>
