Upload via Repo Manager v5 by Ted

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <body>
 
     <header class="navbar">
-        <div class="logo">PakDimas</div>
+        <div class="logo">dimas.my.id</div>
         <nav>
             <a href="index.html">Beranda</a>
             <a href="articles.html">Artikel</a>
