Upload via Repo Manager v5 by Ted

--- a/about.html
+++ b/about.html
@@ -23,12 +23,12 @@
     </header>
 
     <section class="page-header">
-        <h1>Profil Pak Dimas</h1>
+        <h1>Profil Dimas Supriyanto</h1>
         <p>Wartawan senior dengan pengalaman lebih dari dua dekade di dunia jurnalisme.</p>
     </section>
 
     <section class="content-container">
-        <img src="assets/img/pakdimas.jpg" class="profile-photo" alt="Foto Pak Dimas">
+        <img src="assets/img/dimas1.png" class="profile-photo" alt="Foto Pak Dimas">
 
         <h2>Biografi Singkat</h2>
         <p>Pak Dimas adalah wartawan senior yang telah berkecimpung di dunia jurnalistik lebih dari 20 tahun. Beliau
