--- a/portfolio.html
+++ b/portfolio.html
@@ -30,19 +30,23 @@
     <section class="content-container portfolio-grid">
 
         <div class="portfolio-card">
-            <img src="assets/img/port1.jpg">
+            <div>
+                <img src="assets/img/portfolio1.png">
+            </div>
             <h3>Liputan Konflik Agraria</h3>
             <p>Feature mendalam tentang konflik tanah yang berdampak pada ribuan warga.</p>
         </div>
 
         <div class="portfolio-card">
-            <img src="assets/img/port2.jpg">
+            <div><img src="assets/img/dimas2.jpg">
+            </div>
             <h3>Investigasi Korupsi Daerah</h3>
             <p>Laporan investigatif yang membawa perubahan kebijakan pemerintah daerah.</p>
         </div>
 
         <div class="portfolio-card">
-            <img src="assets/img/port3.jpg">
+            <div><img src="assets/img/dimas-desak.jpg">
+            </div>
             <h3>Human Story: Penyintas Bencana</h3>
             <p>Kisah inspiratif dan humanis dari para penyintas bencana alam.</p>
         </div>
@@ -53,6 +57,7 @@
         <p>© 2025 dimas.my.id — Dibangun oleh Ted.</p>
     </footer>
 
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
