Upload via Repo Manager v5 by Ted

--- a/articles.html
+++ b/articles.html
@@ -29,9 +29,10 @@
 
     <section class="content-container article-list">
         <div class="article-item">
-            <h2><a href="posts/contoh-artikel-1.html">Judul Artikel 1</a></h2>
+            <h2><a href="posts/bullying-heredity-habit.html">Bullying - A Heredity Habit</a></h2>
             <p class="meta">01 Januari 2025 • Opini</p>
-            <p>Cuplikan singkat artikel untuk memberikan gambaran isi tulisan...</p>
+            <p>Bullying in Indonesia is no longer just juvenile delinquency. It has become a systemic social
+                phenomenon—claiming lives in schools</p>
         </div>
 
         <div class="article-item">
