--- a/portfolio.html
+++ b/portfolio.html
@@ -25,30 +25,33 @@
     <section class="page-header">
         <h1>Portofolio Liputan</h1>
         <p>Kumpulan karya, liputan, dokumentasi, dan pencapaian jurnalistik.</p>
+        <img src="assets/img/portfolio1.png">
     </section>
 
     <section class="content-container portfolio-grid">
 
         <div class="portfolio-card">
+            <h3>Liputan Konflik Agraria</h3>
+            <p>Feature mendalam tentang konflik tanah yang berdampak pada ribuan warga.</p>
             <div>
                 <img src="assets/img/portfolio1.png">
             </div>
-            <h3>Liputan Konflik Agraria</h3>
-            <p>Feature mendalam tentang konflik tanah yang berdampak pada ribuan warga.</p>
         </div>
 
         <div class="portfolio-card">
-            <div><img src="assets/img/dimas2.jpg">
-            </div>
             <h3>Investigasi Korupsi Daerah</h3>
             <p>Laporan investigatif yang membawa perubahan kebijakan pemerintah daerah.</p>
+            <div>
+                <img src="assets/img/dimas-desak.jpg">
+            </div>
         </div>
 
         <div class="portfolio-card">
-            <div><img src="assets/img/dimas-desak.jpg">
-            </div>
             <h3>Human Story: Penyintas Bencana</h3>
             <p>Kisah inspiratif dan humanis dari para penyintas bencana alam.</p>
+            <div>
+                <img src="assets/img/dimas2.jpg">
+            </div>
         </div>
 
     </section>
