--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="navbar">
         <div class="logo">dimas.my.id</div>
         <nav>
-            <a href="index.html">Beranda</a>
+            <a href="index.html" class="active">Beranda</a>
             <a href="articles.html">Artikel</a>
             <a href="about.html">Profil</a>
             <a href="portfolio.html">Portofolio</a>
